@@ -17,6 +17,9 @@ New: Monit Poll cycles has been replaced with Monit Check interval
 
 New: Validate Once has been removed. When Monit now start, it runs
      as a server, continously.
+
+Fixed: If the monit configuration file contains a string with unbalaced escape
+    sequence, monit may crash.
      
 
 Version 5.34.3
